# transplant_26_engineer_car

./: .gitignore  H7一键启动OpenOCD.bat
H7_Framework-master_1/: .mxproject  CMakeLists.txt  H7_Framework.ioc  master1.jdebug
H7_Framework-master_1/Core/Inc/: stm32h7xx_it.h
H7_Framework-master_1/Core/Src/: dma.c  fdcan.c  main.c  spi.c  stm32h7xx_it.c  usart.c
H7_Framework-master_1/USB_DEVICE/App/: usbd_desc.c
H7_Framework-master_1/User/Algorithm/Control/: Classic_Control.c
H7_Framework-master_1/User/Algorithm/Energy/: Power_Ctrl.h
H7_Framework-master_1/User/Algorithm/Filter/: VQF_filter.c  mahony_filter.c
H7_Framework-master_1/User/Algorithm/Kinematics/: Chassis_Calc.c  Chassis_Calc.h
H7_Framework-master_1/User/App/1_Catapult_Hero/Chassis_Task/: Chassis_Ctrl.c
H7_Framework-master_1/User/App/2_Engineer/: CMakeLists.txt
H7_Framework-master_1/User/App/2_Engineer/All_Task/: All_Task.c
H7_Framework-master_1/User/App/2_Engineer/Chassis_Task/: Chassis_Ctrl.c  Chassis_Ctrl.h
H7_Framework-master_1/User/App/2_Engineer/Command/: Robot_Cmd.c  Robot_Cmd.h
H7_Framework-master_1/User/App/2_Engineer/Custom_Controller_Link/: Custom_Controller_Link.c  Custom_Controller_Link.h
H7_Framework-master_1/User/App/2_Engineer/Feedback_Task/: Engineer_Feedback.c  Engineer_Feedback.h
H7_Framework-master_1/User/App/2_Engineer/IMU_Task/: IMU_Task.c
H7_Framework-master_1/User/App/2_Engineer/LeadScrew_Task/: LeadScrew_Ctrl.c  LeadScrew_Ctrl.h
H7_Framework-master_1/User/App/2_Engineer/Picture_Task/: Picture_Ctrl.c  Picture_Ctrl.h
H7_Framework-master_1/User/App/2_Engineer/Store_Task/: Store_Ctrl.c  Store_Ctrl.h
H7_Framework-master_1/User/App/2_Engineer/System_Init/: Robot_Config.c  Robot_Config.h  System_Init.c  System_Init.h
H7_Framework-master_1/User/BSP/DWT/: BSP_DWT.c
H7_Framework-master_1/User/BSP/Engineer_Limit/: Engineer_Limit.c  Engineer_Limit.h
H7_Framework-master_1/User/BSP/TIM/: BSP_TIM.c
H7_Framework-master_1/User/Device/Host_Comm/: Vofa.c
H7_Framework-master_1/User/Device/Indicator/: Buzzer.c  WS2812.c  WS2812.h
H7_Framework-master_1/User/Device/Motor/: BM_Motor.h  DJI_Motor.h  DM_Motor.c  LK_Motor.h
H7_Framework-master_1/User/Device/Power/: Power_CAP.c  Power_CAP.h  Power_Meter.c  Power_Meter.h
H7_Framework-master_1/User/Device/Referee/: CRC_DJI.c  CRC_DJI.h  Referee.c  Referee.h
H7_Framework-master_1/User/Device/Remote/: DBUS.c  SBUS.h
H7_Framework-master_1/User/System/Communication/: Comm_DualBoard.c  Comm_DualBoard.h  EventBus.c
H7_Framework-master_1/User/System/Feedback/: System_Indicator.c
H7_Framework-master_1/User/Utils/Src/: user_lib.c
H7_Framework-master_1/cmake/stm32cubemx/: CMakeLists.txt
H7_Framework-master_2/: .gitignore  H7_Framework.ioc  STM32H723XG_FLASH.ld  master2.jdebug
H7_Framework-master_2/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
H7_Framework-master_2/Core/Src/: gpio.c  stm32h7xx_it.c  tim.c  usart.c
H7_Framework-master_2/User/Algorithm/Control/: Arm_Joint_Algorithm.c  Arm_Joint_Algorithm.h  Model_Control.c  Model_Control.h  observer.c
H7_Framework-master_2/User/Algorithm/Filter/: QuaternionEKF.c  VQF_filter.h  kalman_filter.c  kalman_filter.h  mahony_filter.h
H7_Framework-master_2/User/App/1_Catapult_Hero/All_Task/: All_Task.c
H7_Framework-master_2/User/App/1_Catapult_Hero/Catapult_Task/: Catapult_Ctrl.c
H7_Framework-master_2/User/App/1_Catapult_Hero/Chassis_Task/: Chassis_Ctrl.h
H7_Framework-master_2/User/App/1_Catapult_Hero/Command/: Robot_Cmd.c
H7_Framework-master_2/User/App/1_Catapult_Hero/IMU_Task/: IMU_Task.h
H7_Framework-master_2/User/App/1_Catapult_Hero/System_Init/: Robot_Config.c  System_Init.c
H7_Framework-master_2/User/App/2_Engineer/All_Task/: All_Task.c
H7_Framework-master_2/User/BSP/DWT/: BSP_DWT.h
H7_Framework-master_2/User/BSP/FDCAN/: BSP_FDCAN.c
H7_Framework-master_2/User/BSP/SPI/: BSP_SPI.c  BSP_SPI.h
H7_Framework-master_2/User/BSP/TIM/: BSP_TIM.h
H7_Framework-master_2/User/BSP/UART/: BSP_UART.c  BSP_UART.h
H7_Framework-master_2/User/Device/Host_Comm/: Aim_Vision.c  Aim_Vision.h  Vofa.c
H7_Framework-master_2/User/Device/IMU/: BMI088.h
H7_Framework-master_2/User/Device/Motor/: LK_Motor.c
H7_Framework-master_2/User/Device/Power/: Power_Meter.c
H7_Framework-master_2/User/Device/Referee/: Referee.c
H7_Framework-master_2/User/Device/Remote/: DBUS.c  DBUS.h  VT13.c  VT13.h
H7_Framework-master_2/User/System/Communication/: Comm_DualBoard.c  Comm_DualBoard.h  EventBus.h  Message_Center.c  Message_Center.h
H7_Framework-master_2/User/System/State/: System_State.h
H7_Framework-master_2/User/Utils/Inc/: user_lib.h
H7_Framework-master_2/User/Utils/Src/: Horizon_MATH.c
custom_control/: .mxproject  CMakeLists.txt  H7_Framework.ioc  一键烧录当前H7工程.bat
custom_control/Core/Inc/: main.h  stm32h7xx_it.h  tim.h  usart.h
custom_control/Core/Src/: freertos.c  stm32h7xx_it.c  usart.c
custom_control/User/Algorithm/Control/: Classic_Control.h  observer.h
custom_control/User/Algorithm/Energy/: Power_Ctrl.c
custom_control/User/Algorithm/Filter/: QuaternionEKF.h
custom_control/User/Algorithm/Kinematics/: Chassis_Calc.c
custom_control/User/App/1_Catapult_Hero/: CMakeLists.txt
custom_control/User/App/1_Catapult_Hero/Catapult_Task/: Catapult_Ctrl.h
custom_control/User/App/1_Catapult_Hero/IMU_Task/: IMU_Task.c
custom_control/User/App/2_Engineer/All_Task/: All_Task.c  (+1 more)
custom_control/User/BSP/FDCAN/: BSP_FDCAN.c  BSP_FDCAN.h
custom_control/User/Device/Host_Comm/: Vofa.h
custom_control/User/Device/IMU/: BMI088.c
custom_control/User/Device/Indicator/: Buzzer.h
custom_control/User/Device/Motor/: BM_Motor.c  DJI_Motor.c  DM_Motor.h
custom_control/User/Device/Remote/: DBUS.h  SBUS.c  VT13.c
custom_control/User/System/Communication/: Comm_DualBoard.c  Comm_DualBoard.h
custom_control/User/System/Feedback/: System_Indicator.h
custom_control/User/System/State/: System_State.c
custom_control/User/Utils/Inc/: All_define.h  Horizon_MATH.h  Offline_Detector.h
custom_control/User/Utils/Src/: Offline_Detector.c
matlab/matlab和车联调/: engineer_arm.m
(+30 files in other folders)
